#7 [Wandy, Isa] - Corrects spacing on the second article of featured section for the desktop home

--- a/themes/main/src/sass/nacional.scss
+++ b/themes/main/src/sass/nacional.scss
@@ -51,6 +51,10 @@
     border-top: 2px solid $gray-lighter;
     padding-top: 15px;
     margin-top: 15px;
+    @include media-query(MEDIUM) {
+      border-top: 0;
+      margin-top: 0;
+    }
   }
 
   .description{
